<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Refresh -->

    <item
        android:id="@+id/menu_refresh"

        android:title="@string/refresh"

        android:showAsAction="never"/>

    <!-- Parking List -->

    <item
        android:id="@+id/menu_parking_list"

        android:title="@string/parking_list"

        android:showAsAction="never"/>

    <!-- My Bookings -->

    <item
        android:id="@+id/menu_bookings"

        android:title="@string/my_bookings"

        android:showAsAction="never"/>

    <!-- About -->

    <item
        android:id="@+id/menu_about"

        android:title="@string/about"

        android:showAsAction="never"/>

    <!-- Language -->

    <item
        android:id="@+id/menu_language"

        android:title="🌐 Language"

        android:showAsAction="never"/>

    <!-- Admin -->

    <item
        android:id="@+id/menu_admin"

        android:title="@string/admin_login"

        android:showAsAction="never"/>

    <!-- Exit -->

    <item
        android:id="@+id/menu_exit"

        android:title="@string/exit"

        android:showAsAction="never"/>
</menu>