<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#F5F5F5">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        android:padding="24dp">

        <!-- Title -->

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/add_parking"

            android:textSize="30sp"

            android:textStyle="bold"

            android:textColor="#000"

            android:layout_marginBottom="30dp"/>

        <!-- Add Parking -->

        <Button
            android:id="@+id/btnAddParking"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="ADD PARKING"/>

        <!-- Manage Parking -->

        <Button
            android:id="@+id/btnManageParking"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/manage_parking"

            android:layout_marginTop="16dp"/>

        <!-- View Bookings -->

        <Button
            android:id="@+id/btnViewBookings"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/view_bookings"

            android:layout_marginTop="16dp"/>

        <!-- Logout -->

        <Button
            android:id="@+id/btnLogout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/logout"

            android:layout_marginTop="16dp"/>

    </LinearLayout>

</ScrollView>